# swift-log

./: .gitignore  .licenseignore  .mailmap  .spi.yml  .swiftformat  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  Logging.podspec  NOTICE.txt  Package.swift  Package@swift-5.0.swift  Package@swift-5.1.swift  Package@swift-5.2.swift  Package@swift-5.3.swift  Package@swift-5.4.swift  Package@swift-5.5.swift  Package@swift-5.6.swift  Package@swift-6.0.swift  Package@swift-6.1.swift  README.md  SECURITY.md  index.html
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-release.yml  codespell.yml  main.yml  pull_request.yml  pull_request_label.yml
Benchmarks/: Package.swift
Benchmarks/BenchmarkingUtils/: Package.swift
Benchmarks/Benchmarks/: SwiftLogBenchmarks.swift
Benchmarks/DisableCriticalLogs/: Package.swift
Benchmarks/DisableCriticalLogs_Benchmarks/: Package.swift
Benchmarks/DisableDebugLogs/: Package.swift
Benchmarks/DisableDebugLogs_Benchmarks/: Package.swift
Benchmarks/DisableErrorLogs/: Package.swift
Benchmarks/DisableErrorLogs_Benchmarks/: Package.swift
Benchmarks/DisableInfoLogs/: Package.swift
Benchmarks/DisableInfoLogs_Benchmarks/: Package.swift
Benchmarks/DisableNoticeLogs/: Package.swift
Benchmarks/DisableNoticeLogs_Benchmarks/: Package.swift
Benchmarks/DisableTraceLogs/: Package.swift
Benchmarks/DisableTraceLogs_Benchmarks/: Package.swift
Benchmarks/DisableWarningLogs/: Package.swift
Benchmarks/DisableWarningLogs_Benchmarks/: Package.swift
Benchmarks/MaxLogLevelNone/: Package.swift
Benchmarks/MaxLogLevelWarning/: Package.swift
Benchmarks/NoTraits/: Package.swift
Benchmarks/NoTraits_Benchmarks/: Package.swift
Snippets/: basic-usage.swift
Sources/: CMakeLists.txt
Sources/ExampleImplementation/: CommonLogHandler.swift  ConfigLogHandler.swift  ConfigLogging.swift  FileLogHandler.swift  FileLogging.swift  SimpleLogHandler.swift  SimpleLogger.swift  SimpleLogging.swift
Sources/ExampleLoggerImpl/: ExampleLoggerImpl.swift
Sources/ExampleUsage/: ConfigExample.swift  ContextBasedSystem.swift  GlobalLoggerBasedSystem.swift  LocalLoggerBasedSystem.swift  MUXExample.swift  MultiplexExample.swift  RandomLibrary.swift  main.swift
Sources/Examples/: ExampleLoggerImpl.swift  ExplicitLoggerPassingExample.swift  LoggerPerSubsystemExample.swift  MUXExample.swift  OneGlobalLoggerExample.swift  RandomExample.swift  main.swift
Sources/InMemoryLogging/: CMakeLists.txt  InMemoryLogHandler.swift
Sources/Logging/: CMakeLists.txt  Locks.swift  LogEvent.swift  LogHandler.swift  Logger+Attributes.swift  Logger+With.swift  Logger.swift  LoggerWithSource.swift  Logging.swift  LoggingSystem.swift  MetadataProvider.swift  PrivacyAwareLogHandlerWrapper.swift  Sendable.swift  StdioOutputStream.swift  TestingLogHandler.swift
Sources/Logging/Docs.docc/: DisableLogLevelsDuringCompilation.md  ImplementingALogHandler.md  LoggingBestPractices.md  UnderstandingLoggers.md  index.md
Sources/Logging/Docs.docc/BestPractices/: 001-ChoosingLogLevels.md  002-StructuredLogging.md  003-AcceptingLoggers.md  004-TestingLogging.md
Sources/Logging/Docs.docc/Proposals/: Proposals.md  SLG-0001-metadata-providers.md  SLG-0002.md  SLG-0003.md  SLG-0004-metadata-value-attributes.md  SLG-0004-metadata-values-privacy-attributes.md  SLG-0005-log-event-LogHandler-API.md  SLG-0005-task-local-logger.md  SLG-0006-log-event-LogHandler-API.md  SLG-0006-task-local-logger.md  SLG-NNNN.md
Sources/Logging/Docs.docc/Reference/: LogEvent.md  LogHandler.md  Logger-Level.md  Logger-Message.md  Logger-MetadataProvider.md  Logger-MetadataValue.md  Logger.md  LoggingSystem.md  MultiplexLogHandler.md  StreamLogHandler.md  SwiftLogNoOpLogHandler.md
Sources/Logging/Documentation.docc/: Logger.md
Sources/Logging/Handlers/: MultiplexLogHandler.swift  StreamLogHandler.swift  SwiftLogNoOpLogHandler.swift
Sources/LoggingAttributes/: SensitivityAttribute.swift  SensitivityAwareLogHandlerWrapper.swift
Sources/LoggingTestKit/: TestLogHandler.swift
Sources/OSLogHandler/: OSLogHandler.swift
Sources/OSLogLogHandler/: OSLogHandler.swift
Sources/ServerLoggerAPI/: logging.swift
Sources/TestApp/: main.swift  (+4 more)
Tests/: CMakeLists.txt  LinuxMain.swift
Tests/InMemoryLoggingTests/: CMakeLists.txt  InMemoryLogHandlerTests.swift
Tests/LoggingTests/: BaggageLoggingTest+XCTest.swift  BaggageLoggingTest.swift  CMakeLists.txt  CompatibilityTest+XCTest.swift  CompatibilityTest.swift  ErrorLogTest.swift  GlobalLoggingTest+XCTest.swift  GlobalLoggingTest.swift  LocalLoggingTest+XCTest.swift  LocalLoggingTest.swift  LockTest.swift  LogEventTest.swift  LoggingTest+XCTest.swift  LoggingTest.swift  MDCTest+XCTest.swift  MDCTest.swift  MetadataAttributesTest.swift  MetadataProviderTest+XCTest.swift  MetadataProviderTest.swift  MetadataValueInterpolationTest.swift  PrivacyLabelsTests.swift  StreamLogHandlerTest.swift  StreamLogHandlerTimestampTests.swift  SwiftLogNoOpLogHandlerTest.swift  TaskLocalLoggerTest.swift  TaskLocalLoggerTests.swift  TestLogger.swift  TestSendable.swift  TestTestingLogHandler.swift  _TestBaggage.swift  _Tracing.swift
Tests/LoggingTests/SubDirectoryOfLoggingTests/: EmitALogFromSubDirectory.swift
dev/: git.commit.template
docker/: Dockerfile  docker-compose.1604.40.yaml  docker-compose.1804.50.yaml  docker-compose.1804.51.yaml  docker-compose.1804.52.yaml  docker-compose.1804.53.yaml  docker-compose.2004.54.yaml  docker-compose.2004.55.yaml  docker-compose.2004.56.yaml  docker-compose.2004.57.yaml  docker-compose.2004.58.yaml  docker-compose.2004.main.yaml  docker-compose.2204.510.yaml  docker-compose.2204.59.yaml  docker-compose.2204.main.yaml  docker-compose.yaml
proposals/: 0001-metadata-providers.md  0002-in-memory-handler.md  0002-task-local-logger.md  0002-testing-log-handler.md  xxxx-metadata-providers.md
scripts/: build_podspec.sh  check_no_api_breakages.sh  generate_contributors_list.sh  generate_docs.sh  generate_linux_tests.rb  preview_docc.sh  sanity.sh  soundness.sh
(+386 files in other folders)
